# mcp-jira-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  env.jira.example  pyproject.toml
.github/workflows/: test.yml
examples/: client.py
src/mcp_jira_python/: __init__.py  field_mapper.py  server.py
src/mcp_jira_python/tools/: __init__.py  add_comment.py  add_comment_with_attachment.py  attach_content.py  attach_file.py  audit_issue.py  base.py  create_issue.py  create_issue_link.py  delete_issue.py  format_commit.py  get_create_meta.py  get_epic_issues.py  get_field_mapping.py  get_issue.py  get_issue_attachment.py  get_transitions.py  get_user.py  list_epics.py  list_fields.py  list_issue_types.py  list_link_types.py  list_projects.py  search_issues.py  search_my_issues.py  suggest_issue_fields.py  transition_issue.py  update_issue.py
tests/: README.md  conftest.py  test_jira_connection.py  test_jira_endpoints.py  test_jira_mcp_integration.py  test_jira_mcp_system.py  test_unit.py
tests/e2e_tests/: __init__.py  test_mcp_server.py
tests/endpoint_tests/: test_add_comment.py  test_create_issue.py  test_get_issue.py  test_update_issue.py
tests/unit_tests/: __init__.py  test_add_comment.py  test_add_comment_with_attachment.py  test_attach_content.py  test_attach_file.py  test_audit_issue.py  test_base.py  test_create_issue.py  test_create_issue_custom_fields.py  test_create_issue_link.py  test_delete_issue.py  test_field_mapper.py  test_format_commit.py  test_get_create_meta.py  test_get_epic_issues.py  test_get_field_mapping.py  test_get_issue.py  test_get_issue_attachment.py  test_get_issue_custom_fields.py  test_get_transitions.py  test_get_user.py  test_list_epics.py  test_list_fields.py  test_list_issue_types.py  test_list_link_types.py  test_list_projects.py  test_search_issues.py  test_search_my_issues.py  test_suggest_issue_fields.py  test_transition_issue.py  test_update_issue.py  test_update_issue_custom_fields.py
