[project]
name = "mcp-jira-python"
version = "0.1.0"
description = "MCP server for JIRA in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.2.1", "jira", "python-dotenv" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jira_python"]

[project.scripts]
jira-api = "mcp_jira_python:main"
